# zk-p2p

./: .gitignore  FUNDING.json  LICENSE  README.md  package.json
.github/: circuit-test.yml
.github/PULL_REQUEST_TEMPLATE/: circuit_template.md
.github/workflows/: circuit-test.yml  circuit.yml  contracts-domain.yml  contracts-domains.yml  contracts-ramp.yml  push.yml
circuits/: .gitignore  README.md
circuits-circom/: .npmignore  README.md  garanti_registration.circom  garanti_send.circom  hdfc_registration.circom  hdfc_send.circom  package-lock.json  package.json  paylah_registration.circom  paylah_send.circom  tsconfig.json  venmo_receive.circom  venmo_receive_registration.circom  venmo_registration.circom  venmo_send.circom  venmo_send_registration.circom
circuits-circom/contracts/: VenmoReceiveVerifier.sol  VenmoRegistrationVerifier.sol  VenmoSendVerifier.sol  hdfc_registration_verifier.sol  hdfc_send_verifier.sol  paylah_registration_verifier.sol  paylah_send_verifier.sol  venmo_receive_verifier.sol  venmo_registration_verifier.sol  venmo_send_verifier.sol  venmo_send_verifier_v2.sol
circuits-circom/emls/: venmo_complete.eml  venmo_receive.eml  venmo_send.eml
circuits-circom/helpers/: hdfc_helpers.circom  paylah_helpers.circom
circuits-circom/package/: .npmignore  generate_input.ts  package.json  preprocess.ts  pubkey_hash.ts
circuits-circom/regex_to_circom/: gen.py  regex_to_dfa.js
circuits-circom/regexes/: body_hash_regex.circom  from_regex.circom  to_regex.circom  venmo_actor_id.circom  venmo_actor_id.json  venmo_amount.circom  venmo_amount.json  venmo_payee_id.circom  venmo_payee_id.json  venmo_payer_id.circom  venmo_payer_id.json  venmo_receive_amount.circom  venmo_receive_amount.json  venmo_receive_id.circom  venmo_receive_id.json  venmo_send_amount.circom  venmo_send_amount.json  venmo_send_id.circom  venmo_timestamp.circom
circuits-circom/scripts/: 0_server_setup.sh  10_run_all.sh  1_compile.sh  1_compile_unsafe.sh  2_gen_wtns.sh  3_gen_both_zkeys.sh  3_gen_chunk_zkey.sh  3_gen_chunk_zkey_unsafe.sh  3_gen_zkey_unsafe.sh  4_gen_vkey.sh  5_gen_proof.sh  6_gen_proof_rapidsnark.sh  7_upload_to_s3.sh  8_gen_sol_verifier.sh  9_gen_calldata.sh  9_gen_sol_calldata.sh  circuit.env.example  generate_input.ts  preprocess_input.ts  pubkey_hash.ts  upload_to_s3.py
circuits-circom/stubs/: email-verifier.circom
circuits-circom/tasks/: package.json  pubkey_hash.ts
circuits-circom/test/: garanti_registration.spec.ts  garanti_send.spec.ts  hdfc_registration.spec.ts  hdfc_send.spec.ts  paylah_registration.spec.ts  paylah_send.spec.ts  preprocess_input.spec.ts  utils.js  venmo_receive.js  venmo_receive.spec.ts  venmo_registration.js  venmo_registration.spec.ts  venmo_send.js  venmo_send.spec.ts
circuits-circom/types/: declaration.d.ts
circuits-halo2/: .gitignore  Cargo.toml  README.md  rust-toolchain
circuits-halo2/benches/: email_verify.rs  recursion.rs
circuits-halo2/configs/: agg_bench.config  agg_to_agg.config  app_bench.config  test3_email_verify.config  test_ex3_email_verify.config
circuits-halo2/src/: helpers.rs  regex_sha2_base64.rs  utils.rs
circuits-halo2/src/vrm/: js_caller.rs  mod.rs  regex.js
circuits-halo2/test_data/: from_defs.json  invalid_test_email1.eml  test3_email_body_defs.json  test4_send_amount_defs.json
client/: .env.default  package.json  tsconfig.json
contracts/: .env.default  .gitignore  .solcover.js  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts-domain/: .solcover.js  hardhat.config.ts
contracts-domains/: hardhat.config.ts  package.json
contracts-ramp/: hardhat.config.ts  package.json  tsconfig.json
(+1434 files in other folders)
