[package]
name = "halo2-zk-email"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev-graph"]
dev-graph = ["halo2-base/dev-graph", "plotters"]

[dependencies]
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
# halo2-dynamic-sha256 = { path = "../halo2-dynamic-sha256-1" }
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "feat/lookup" }
halo2-rsa = { git = "https://github.com/zkemail/halo2-rsa.git", version = "0.1.0", branch = "feat/new_bigint", default-features = false }
halo2-regex = { git = "https://github.com/zkemail/halo2-regex.git", version = "0.1.0", branch = "feat/multi_path" }
# halo2-regex = { path = "../halo2-regex-2", version = "0.1.0" }
halo2-base64 = { git = "https://github.com/zkemail/halo2-base64.git", version = "0.1.0", branch = "main" }
num-traits = "0.2.15"
base64 = "0.21"
# snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", version = "0.1.0", branch = "main" }
# halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_02_02", package = "ecc" }
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
ark-std = { version = "0.4.0", features = ["print-trace"] }
ethereum-types = { version = "0.14", default-features = false, features = [
    "std",
] }
itertools = "0.10.3"
clap = { version = "4.2.1", features = ["derive"] }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
cfdkim = { version = "0.2.6", git = "https://github.com/SoraSuegami/dkim.git" }
slog = "2.7.0"
fancy-regex = "0.11.0"
regex-simple = { version = "1", package = "regex" }
hex = "0.4.3"
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }
serde_regex = "1.1.0"
mailparse = "0.14"
js-sandbox = { version = "0.2.0-rc.1", git = "https://github.com/Bromeon/js-sandbox.git" }
# daggy = "0.8.0"
petgraph = "0.6.3"
graph-cycles = "0.1.0"
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.3" }
temp-env = "0.3.3"

[[bench]]
name = "email_verify"
harness = false

[[bench]]
name = "recursion"
harness = false

[[bin]]
name = "zkemail"
test = false
bench = false

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }
halo2-ecc = { version = "0.2.2", git = "https://github.com/SoraSuegami/halo2-lib.git" }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations//halo2.git", tag = "v2023_02_02" }
